# Confluence-Assistant-Skills

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  PHASE2_FEEDBACK.md  PHASE2_FEEDBACK_PART2.md  PROPOSAL_FEEDBACK.md  README.md  REFACTORING_FEEDBACK.md  REFACTORING_INSTRUCTIONS.md  SRS_RESPONSE_01.md  STATUS_REVIEW.md  STATUS_REVIEW_v2.1.md  conftest.py  pyproject.toml  pytest.ini  release-please-config.json  requirements-e2e.txt  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: browse-skills.md  confluence-assistant-setup.md  skill-info.md
.github/workflows/: ci.yml  docker-publish.yml  e2e-tests.yml  release.yml
commands/: confluence-assistant-setup.md
docker/e2e/: Dockerfile
docs/archived/: PHASE2_FEEDBACK_PART3.md  PROPOSAL_FEEDBACK.md  REFACTORING_FEEDBACK.md  RESPONSE01.md  SKILLS_ROUTER_BRAINSTORM.md  SRS_RESPONSE_02.md
scripts/: run-e2e-tests.sh  run_live_tests.sh  run_single_test.sh  run_tests.sh  setup-env.sh  sync-version.sh  update_skill_md.py
skills/confluence-admin/: SKILL.md
skills/confluence-analytics/: SKILL.md
skills/confluence-assistant/: SKILL.md
skills/confluence-attachment/: SKILL.md
skills/confluence-bulk/: SKILL.md
skills/confluence-comment/: SKILL.md
skills/confluence-hierarchy/: SKILL.md
skills/confluence-jira/: README.md  SKILL.md
skills/confluence-label/: SKILL.md
skills/confluence-ops/: SKILL.md
skills/confluence-page/: SKILL.md
skills/confluence-permission/: SKILL.md
skills/confluence-property/: SKILL.md
skills/confluence-search/: SKILL.md
skills/confluence-space/: SKILL.md
skills/confluence-template/: SKILL.md
skills/confluence-watch/: SKILL.md
src/confluence_assistant_skills/: __init__.py  utils.py
tests/: test_cli.py
(+656 files in other folders)
